; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_xprintf_int.c___printf_render_ptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_xprintf_int.c___printf_render_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__printf_io = type { i32 }
%struct.printf_info = type { i8, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__printf_render_ptr(%struct.__printf_io* %0, %struct.printf_info* %1, i8** %2) #0 {
  %4 = alloca %struct.__printf_io*, align 8
  %5 = alloca %struct.printf_info*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca %struct.printf_info, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store %struct.__printf_io* %0, %struct.__printf_io** %4, align 8
  store %struct.printf_info* %1, %struct.printf_info** %5, align 8
  store i8** %2, i8*** %6, align 8
  %10 = load i8**, i8*** %6, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = bitcast i8* %12 to i8**
  %14 = load i8*, i8** %13, align 8
  %15 = ptrtoint i8* %14 to i64
  store i64 %15, i64* %8, align 8
  %16 = load %struct.printf_info*, %struct.printf_info** %5, align 8
  %17 = bitcast %struct.printf_info* %7 to i8*
  %18 = bitcast %struct.printf_info* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 12, i1 false)
  %19 = getelementptr inbounds %struct.printf_info, %struct.printf_info* %7, i32 0, i32 0
  store i8 120, i8* %19, align 4
  %20 = getelementptr inbounds %struct.printf_info, %struct.printf_info* %7, i32 0, i32 1
  store i32 1, i32* %20, align 4
  %21 = getelementptr inbounds %struct.printf_info, %struct.printf_info* %7, i32 0, i32 2
  store i32 1, i32* %21, align 4
  %22 = bitcast i64* %8 to i8*
  store i8* %22, i8** %9, align 8
  %23 = load %struct.__printf_io*, %struct.__printf_io** %4, align 8
  %24 = call i32 @__printf_render_int(%struct.__printf_io* %23, %struct.printf_info* %7, i8** %9)
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @__printf_render_int(%struct.__printf_io*, %struct.printf_info*, i8**) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
